...
    <!-- Preference summary for General Settings category; the two things users can find in this category -->
    <string name="preference_general_summary2">Default browser, language</string>

    <!-- Preference category for settings about sending usage data -->
    <string name="preference_category_data_collection_use">Data Collection &amp; Use</string>

    <string name="preference_category_search">Search</string>

    <!-- Title of "switch" preference that enables/disables search suggestions -->
    <string name="preference_show_search_suggestions">Get search suggestions</string>
    <!-- Description of the preference that enables/disables search suggestions
        %1$s will be replaced by the app name (e.g. Firefox Focus) -->
    <string name="preference_show_search_suggestions_summary">%1$s will send what you type in the address bar to your search engine</string>
...
    <string name="preference_state_on">On</string>

    <!-- Text that is shown below a "switch" preference that is disabled. -->
    <string name="preference_state_off">Off</string>

    <!-- Item in settings that will open a new preference screen for configuring the URL autocomplete behavior. -->
    <string name="preference_subitem_autocomplete">URL Autocomplete</string>

    <!-- Title of "switch" preference that enables/disables autocomplete for the default list -->
    <string name="preference_switch_autocomplete_topsites">For top sites</string>

    <!-- Summary for the toggle to enable autocomplete for the topsites list
    %s is a placeholder for the app name (e.g. Firefox Focus)-->
...
    <string name="preference_category_autocomplete_manage_sites">Manage sites</string>

    <!-- Item in autocomplete settings that will open a new preference screen for adding and removing URLs to the user-defined list-->
    <string name="preference_autocomplete_subitem_manage_sites">Manage sites</string>

    <!-- Action at the bottom of the list of custom autocomplete URLs that will open a new screen to add a new URL to the list. -->
    <string name="preference_autocomplete_action_add">+ Add custom URL</string>

    <!-- Explanation text above the list of custom autocomplete URLs. -->
    <string name="preference_autocomplete_explanation_text">Your autocomplete list:</string>

    <!-- Action at the bottom of the list of custom autocomplete URLs that will open a new screen to add a new URL to the list. -->
    <string name="preference_autocomplete_action_add2">Add URL</string>
...
    <string name="preference_autocomplete_title_remove">Remove custom URLs</string>

    <!-- A link to SUMO at autocomplete settings. -->
    <string name="preference_autocomplete_learn_more">Learn more</string>

    <!-- Preference summary: Custom (user-defined) autocomplete URLs. -->
    <string name="preference_autocomplete_custom_summary">Add and manage custom autocomplete URLs.</string>

    <!-- Label for the "custom autocomplete URL" input field -->
    <string name="preference_autocomplete_add_title">URL to add</string>

    <!-- "Hint" text for the "custom autocomplete URL" input field. Shown when the field is empty. -->
    <string name="preference_autocomplete_add_hint">Paste or enter URL</string>
...
    <string name="preference_autocomplete_add_example">Example: example.com</string>

    <!-- Confirmation "snackbar" shown after a new custom autocomplete URL has been added. -->
    <string name="preference_autocomplete_add_confirmation">New custom URL added.</string>

    <!-- Menu item to remove existing autocomplete URLs. -->
    <string name="preference_autocomplete_menu_remove">Remove</string>

    <!-- Content description (not visible, for screen readers etc.): Button that will delete all selected custom autocomplete URLs. -->
    <string name="preference_autocomplete_action_remove_content_description">Remove</string>

    <!-- Error message shown if the entered custom autocomplete URL is not valid or empty. -->
    <string name="preference_autocomplete_add_error">Double-check the URL you entered.</string>
...
