...
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground">
    <TextView
        android:id="@+id/domainView"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
...
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_reorder"
        android:importantForAccessibility="no"
        android:paddingEnd="?android:attr/listPreferredItemPaddingStart" />
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="?android:attr/listPreferredItemPaddingStart" />
</LinearLayout>
